--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.3/popup.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Mastermind Game</title>
   </head>
@@ -11,6 +12,7 @@
     <div class="top">
       <h1>Mastermind Game</h1>
       <div><button id="start-button">Start New Game</button></div>
+      <Div id="message">Try to find the colors in the exact order</Div>
       <div id="code">
         <div class="hole" id="code-0">?</div>
         <div class="hole" id="code-1">?</div>
