--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="top">
       <h1>Mastermind Game</h1>
       <div><button id="start-button">Start New Game</button></div>
-      <Div id="message">Try to find the colors in the exact order</Div>
+      <div id="message"></div>
       <div id="code">
         <div class="hole" id="code-0">?</div>
         <div class="hole" id="code-1">?</div>
