final without sound

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="main-row">
       <div id="color-set">
-        <div class="hole red" id="red"></div>
+        <div class="hole red selectedColor" id="red"></div>
         <div class="hole yellow" id="yellow"></div>
         <div class="hole green" id="green"></div>
         <div class="hole blue" id="blue"></div>
