--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
       </div>
     </div>
     <div id="guess-rows"></div>
+    <footer>
+      <div>Background music from <a href="https://soundimage.org/">Soundimage.org</a></div>
+    </footer>
   </body>
 </html>
