need to modify the README

--- a/index.html
+++ b/index.html
@@ -37,17 +37,14 @@
       </div>
       <div class="control">
         <button id="check">Check</button>
-        <!-- <div class="feedback">
-                <div class="feedback-hole" id="feedback0"></div>
-                <div class="feedback-hole" id="feedback1"></div>
-                <div class="feedback-hole" id="feedback2"></div>
-                <div class="feedback-hole" id="feedback3"></div>    
-            </div>  -->
       </div>
     </div>
     <div id="guess-rows"></div>
     <footer>
-      <div>Background music from <a href="https://soundimage.org/">Soundimage.org</a></div>
+      <div>
+        Background music from
+        <a href="https://soundimage.org/">Soundimage.org</a>
+      </div>
     </footer>
   </body>
 </html>
